Update for next development version

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>org.aksw.maven.plugins</groupId>
 	<artifactId>tdb2-maven-plugin</artifactId>
-	<version>0.0.2</version>
+	<version>0.0.3-SNAPSHOT</version>
 	<packaging>maven-plugin</packaging>
 
 	<name>TDB2 Maven Plugin</name>
